<resources>
    <string name="app_name">Login_MVP</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">Login</string>
    <string name="clear">Clear</string>
    <string name="correct_user_mvp_mvp">correct user: mvp, mvp</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="set_name">Set name</string>
    <string name="set_phone">Set Phone</string>
    <string name="set_gender">Set Gender</string>
    <string name="drop_table">DROP TABLE IF EXISTS</string>
    <string name="set_address">Set Address</string>
    <string name="selectALL">Select * from</string>
</resources>
