<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <TextView
        android:textSize="@dimen/sp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:id="@+id/text_itemName"
        android:hint="@string/set_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="@dimen/sp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_50"
        android:id="@+id/text_itemPhone"
        android:layout_toRightOf="@id/text_itemName"
        android:hint="@string/set_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/text_itemName"
        android:layout_marginStart="@dimen/dp_50"
        />
    <TextView
        android:textSize="@dimen/sp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:id="@+id/text_itemAdd"
        android:layout_below="@id/text_itemPhone"
        android:hint="@string/set_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="@dimen/sp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_50"
        android:id="@+id/text_itemGender"
        android:layout_toRightOf="@id/text_itemAdd"
        android:layout_below="@id/text_itemPhone"
        android:hint="@string/set_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/text_itemAdd"
        android:layout_marginStart="@dimen/dp_50"
        />
</RelativeLayout>