<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/dp_10"
    >
    <RelativeLayout
        android:padding="@dimen/dp_5"
        android:id="@+id/relative_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/text_name"
            android:textSize="@dimen/sp_20"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textImeMultiLine"
            android:importantForAutofill="no"
            />
        <EditText
            android:inputType="number"
            android:textSize="@dimen/sp_20"
            android:hint="@string/phone"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_below="@id/text_name"
            android:id="@+id/text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            tools:ignore="TextFields"
            />
        <EditText
            android:inputType="textImeMultiLine"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_below="@id/text_phone"
            android:textSize="@dimen/sp_20"
            android:hint="@string/address"
            android:id="@+id/text_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            />
        <EditText
            android:inputType="textImeMultiLine"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_below="@id/text_add"
            android:textSize="@dimen/sp_20"
            android:id="@+id/text_gender"
            android:hint="@string/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            />
    </RelativeLayout>
    <RelativeLayout
        android:padding="@dimen/dp_4"
        android:gravity="center"
        android:id="@+id/relative_button"
        android:layout_below="@id/relative_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:onClick="onClick"
            android:id="@+id/button_save"
            android:text="@string/save"
            android:textSize="@dimen/sp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:layout_marginLeft="@dimen/dp_30"
            android:onClick="onClick"
            android:layout_toRightOf="@id/button_save"
            android:id="@+id/button_load"
            android:text="@string/load"
            android:textSize="@dimen/sp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/button_save"
            android:layout_marginStart="@dimen/dp_30"
            />
    </RelativeLayout>
    <RelativeLayout
        android:padding="@dimen/dp_5"
        android:layout_below="@id/relative_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:padding="@dimen/dp_5"
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>
</RelativeLayout>